@@ -1,3 +1,8 @@
+2008-05-04  Paolo Borelli  <pborelli@katamail.com>
+
+	* src/baobab-remote-connect-dialog.c:
+	More fixups for the dialog
+
 2008-05-04  Fabio Marzocca  <thesaltydog@gmail.com>
 
 	* src/baobab-remote-connect-dialog.h:
